--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.0.4",
+    "@contentful/rich-text-react-renderer": "^15.17.0",
     "@contentful/rich-text-types": "^16.1.0",
     "@types/node": "20.1.7",
     "@types/react": "18.2.6",
